--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -15,10 +15,10 @@ html {
 /*Webkit: prevent flickers
 Having flickering problems in Webkit? Use -webkit-backface-visibility. See this question for some discussions on this.
 */
-.box {
+.c {
   -webkit-backface-visibility: hidden;
 }
-.box {
+.c {
   -webkit-transition: translate3d(0,0,0);
 }
 
@@ -139,13 +139,15 @@ button:disabled {
 
 
 .form-controls, .browse-controls {
-    position:relative;
+    position: fixed;
+    top: 40px;
+    left: 0;
     width: 100%;
     height: 35px;
     background-color: #fff;
     color: #333;
     border-bottom: 1px solid #ccc;
-    padding: 3px 0 0 0;
+    padding: 3px 0 0 18px;
 }
 
 
@@ -194,6 +196,7 @@ button:disabled {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    padding-top: 12px;
 }
 
 
@@ -254,7 +257,7 @@ button:disabled {
 }
 
 .hcol {
-    font-size: 11px;
+    font-size: 10px;
     text-transform: uppercase;
 }
 
@@ -335,7 +338,7 @@ button:disabled {
 
 .c {
     position:relative;
-    padding: 0px 20px 40px 20px;
+    padding: 40px 20px 40px 20px;
     background-color: white;
     -webkit-box-shadow: 0px 0px 138px 67px rgba(0, 0, 0, 0.3);
     -moz-box-shadow: 0px 0px 138px 67px rgba(0, 0, 0, 0.3);
