--- a/app/views/nav.ejs
+++ b/app/views/nav.ejs
@@ -10,8 +10,9 @@
 <% } else { %>
     <a href='/login'>Login</a> <a href='/register'>Register</a>
 <% } %>
-
 </div>
+
+<div id="control-bar"></div>
 
 <% if (message) { %>
 <div id="message">
