home & nav tweaks

--- a/app/views/cms/dashboard.ejs
+++ b/app/views/cms/dashboard.ejs
@@ -5,7 +5,11 @@
 <div class="padded">
 
 <% for(var p in models) { %>
-<a href='/cms/browse/<%=p%>'><%= p %></a><br>
+    <div style="width:200px; height:70px; border: 1px solid #555; margin:0 10px 10px 0;padding:10px;">
+    <%= p %><br>
+    <a href='/cms/browse/<%=p%>'>browse</a>
+    <a href='/cms/browse/<%=p%>'>create</a>
+        </div>
 <% } %>
 
 </div>
