--- a/app/views/cms/head.ejs
+++ b/app/views/cms/head.ejs
@@ -4,6 +4,8 @@
 <script src="/js/browse.js"></script>
 <script src="/js/app.js"></script>
 
+<script src="/js/lib/moment.min.js"></script>
+<script src="/js/lib/ejs_production.js"></script>
 <script src="/js/lib/ck/ckeditor.js"></script>
 <script src="/js/lib/codemirror.js"></script>
 <script src="/js/lib/jquery.transit.js"></script>
