--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -17,7 +17,7 @@ Having flickering problems in Webkit? Use -webkit-backface-visibility. See this 
 }
 
 /* want to apply globally, but causes probs with ckeditor */
-.control-group, .controls, input, .hrow, .hcol, .crow, .ccol, #tool-bar, #control-bar {
+.control-group, .controls, input, .hrow, .hcol, .crow, .ccol, #tool-bar, #control-bar, #info-panel {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -49,19 +49,21 @@ input {
 }
 
 input.small {
-    font-size: 11px;
+    font-size: 12px;
     padding: 3px;
     width: 100px;
+    color:#000;
 }
 
 
 
-a {
+a, #info-cog {
     color: #48adff;
     text-decoration: none;
+    cursor:pointer;
 }
 
-a:hover {
+a:hover, #info-cog:hover {
     color: #79b6ff;
 }
 
@@ -69,20 +71,51 @@ button {
     font-weight: bold;
     background-color: #48adff;
     padding: 4px 9px 5px 8px;
-    margin-right:6px;
+    margin: 2px 6px 0 0;
     color: #fff;
     cursor: pointer;
     border: 0;
-
+    border-radius: 2px;
 }
 
 button:hover:enabled {
-    background-color: #b7e0ff;
+    background-color: #088fff;
 }
 
 button:disabled {
     opacity: .4;
 }
+
+button.delete {
+    background-color: #780500;
+}
+
+button.delete:hover:enabled {
+    background-color: #aa0700;
+}
+
+
+select {
+    width: 100px;
+    font-size: 12px;
+    border: 1px solid lightblue;
+    border-radius: 3px;
+    color: black;
+    padding: 3px;
+    -webkit-appearance: none;
+
+    background:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='50px' height='50px'><polyline points='46.139,15.518 25.166,36.49 4.193,15.519'/></svg>") right no-repeat;
+
+    background-color: lightblue;
+    background-transparency: 0.5;
+    background-position: right 15px top 22px;
+    background-size: 18px 18px;
+}
+select:active {
+    border: 1px solid #000;
+}
+
+
 
 .btn-right {
    float: right;
@@ -109,8 +142,12 @@ button:disabled {
     height: 40px;
     background-color: #04061a;
     color: #eee;
-    border-bottom: 1px solid #48adff;
+    /*border-bottom: 1px solid #48adff;*/
     z-index: 15;
+    -webkit-box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.1);
+
 }
 
 
@@ -149,11 +186,26 @@ button:disabled {
     background-color: #fff;
     color: #333;
     border-bottom: 1px solid #ccc;
-    padding: 4px 25px 0 18px;
+    padding: 4px 15px 0 18px;
     z-index: 12;
 }
 
+#info-panel {
+    position:fixed;
+    top:40px;
+    right: 0px;
+    width: 240px;
+    height: 100%;
+    background-color: #282a38;
+    color: #ccc;
+    padding: 10px;
+    font-size: 13px;
+    z-index: 13;
+}
 
+#info-panel-content {
+    padding: 10px 20px 10px 15px;
+}
 .heading {
     font-size: 20px;
 }
@@ -164,6 +216,8 @@ button:disabled {
 
 .form .form {
 }
+
+
 
 
 .control-group {
@@ -188,7 +242,9 @@ button:disabled {
 }
 
 .model {
-    width: 300px;
+    min-width: 150px;
+    max-width: 300px;
+    height: 25px;
     padding: 8px 12px 24px 8px;
     margin: 5px 0 5px 0;
     font-size: 12px;
@@ -247,9 +303,8 @@ button:disabled {
 }
 
 .filters {
-    float: left;
+    float: right;
     font-size: 13px;
-    padding: 0 5px 2px 0;
     cursor:pointer;
 }
 
@@ -268,9 +323,17 @@ button:disabled {
     /*background-color: #ccc;*/
 /*}*/
 
+.pr {
+    padding: 10px 0 10px 0;
+    border-bottom: 1px solid #555;
+}
+.pr .cond, .pr .i {
+    margin-left:50px;
+}
+
 .pager {
-    padding: 5px 130px 15px 0;
-    float: right;
+    padding: 5px 0 15px 0;
+    float: left;
     font-size: 13px;
 }
 
@@ -372,7 +435,7 @@ button:disabled {
     height: 100%;
     top: 0;
     left: 0;
-    background-color: rgba(255,255,255, .7);
+    background-color: rgba(0,0,0, .7);
 }
 
 .c {
@@ -386,15 +449,5 @@ button:disabled {
 }
 
 
-.info {
-    position:fixed;
-    top:75px;
-    right: 0px;
-    width: 240px;
-    height: 100%;
-    background-color: #444;
-    color: #ccc;
-    padding: 10px;
-    font-size: 13px;
-}
+
 
