--- a/app/views/cms/browse.ejs
+++ b/app/views/cms/browse.ejs
@@ -6,72 +6,10 @@
 <div id="browser"></div>
 
 <script>
-
-    var ctrlKeyDown;
-    $(window).keydown(function (e){
-        ctrlKeyDown = e.ctrlKey || e.altKey || e.shiftKey || e.metaKey;
-    }).keyup(function(e){
-        ctrlKeyDown = e.ctrlKey || e.altKey || e.shiftKey || e.metaKey;
-    });
-
-
-    var layers = new layers_layers();
-    function add_root_browser(type)
-    {
-        var browser = new browse_browse(type);
-        browser.add_listener('select', function (f, r) {
-            if (ctrlKeyDown)
-            {
-                var url = '/cms/update/' + type + '/' + r._id;
-                var win = window.open(url, ctrlKeyDown ? '_blank' : '_self');
-                win.focus();
-            }
-            else
-            {
-                var ff = form(type, r._id);
-                ff.add_listener('close', function (e, r) {
-                   layers.pop_layer();
-                });
-            }
-        });
-        layers.add_layer(browser);
-    }
-
-    var type = "<%= type %>";
-    window.addEventListener("popstate", function(e) {
-        var s = e.state ? e.state : location.pathname;
-        var f = layers.find(s) ;
-        if (f != -1)
-        {
-            console.log('found', e.state);
-            if (f==0 && layers.size() == 1)
-                history.back();
-            else
-                layers.pop_to(s);
-        }
-        else
-        {
-            console.log('create',e.state)
-            layers.clear_layers();
-            var p = s.substring(1).split('/');
-            console.log(p);
-            if (p[1] == 'browse')
-                add_root_browser(p[2])
-            else if (p[1] == 'create')
-                form(p[2])
-            else if (p[1] == 'update')
-                form(p[2], p[3]);
-        }
-    });
-
-
-
-
-    $(document).ready(function () {
-        $("#browser").append(layers.$el());
-    });
-
-
+$(document).ready(function () {
+    var cms = init_cms();
+    $("#browser").append(cms.$el());
+});
 </script>
 
 <% include ../foot %>
