--- a/app/views/cms/dashboard.ejs
+++ b/app/views/cms/dashboard.ejs
@@ -2,11 +2,11 @@
 <% include ../head1 %>
 <% include ../nav %>
 
-<div class="padded">
+<div style="padding: 100px 300px 20px 20px;">
 
 <% for(var p in models) { %>
-    <div style="width:200px; height:70px; border: 1px solid #555; margin:0 10px 10px 0;padding:10px;">
-    <%= p %><br>
+    <div style="width:200px; height:70px; border: 1px solid #555; margin:0 10px 10px 0;padding:10px;float:left; ">
+    <span style="font-size:22px; "><%= p %></span><br>
     <a href='/cms/browse/<%=p%>'>browse</a>
     <a href='/cms/browse/<%=p%>'>create</a>
         </div>
