hm forms... roughed out from generated

--- a/app/views/cms/dashboard.ejs
+++ b/app/views/cms/dashboard.ejs
@@ -8,7 +8,7 @@
     <div style="width:200px; height:70px; border: 1px solid #555; margin:0 10px 10px 0;padding:10px;float:left; ">
     <span style="font-size:22px; "><%= p %></span><br>
     <a href='/cms/browse/<%=p%>'>browse</a>
-    <a href='/cms/browse/<%=p%>'>create</a>
+    <a href='/cms/create/<%=p%>'>create</a>
         </div>
 <% } %>
 
