--- a/app/views/cms/browse.ejs
+++ b/app/views/cms/browse.ejs
@@ -6,9 +6,15 @@
 <div id="browser"></div>
 
 <script>
+<%
+var t = {};
+for (var p in models)
+    t[p] = models[p].meta.name;
+t = JSON.stringify(t);
+%>
+var templates = <%-t%>;
 $(document).ready(function () {
-    var cms = init_cms();
-    $("#browser").append(cms.$el());
+    $("#browser").append(init_cms().$el());
 });
 </script>
 
