--- a/app/views/cms/form.ejs
+++ b/app/views/cms/form.ejs
@@ -8,11 +8,17 @@
 </div>
 
 <script>
-
-    $(document).ready(function () {
-        var cms = init_cms();
-        $("#workspace").append(cms.$el());
-    });
+<%
+var t = {};
+for (var p in models)
+    t[p] = models[p].meta.name;
+t = JSON.stringify(t);
+%>
+var templates = <%-t%>;
+$(document).ready(function () {
+    var cms = init_cms();
+    $("#workspace").append(cms.$el());
+});
 </script>
 
 <% include ../foot %>
