--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -478,8 +478,8 @@ padding-top: 20px;
 .log-row {
     padding:10px 0 10px 0;
 }
-.log-row .email { color: #ccc; float: left; }
-.log-row .action { float: right; top: 0; color: #fff; }
-.log-row .diff { font-size: 11px; color: #999; clear: both;}
+.log-row .email { color: #ccc;  }
+.log-row .action {  top: 0; color: #fff; }
+.log-row .diff { font-size: 11px; color: #999;}
 
 
