--- a/app/views/cms/dashboard.ejs
+++ b/app/views/cms/dashboard.ejs
@@ -1,4 +1,5 @@
 <% include ../head %>
+<% include head %>
 <% include ../head1 %>
 <% include ../nav %>
 
@@ -17,6 +18,59 @@
 <br clear="both">
 
 </div>
+
+
+
+
+
+<script>
+<%
+var t = {};
+for (var p in models)
+    t[p] = models[p].meta.name;
+t = JSON.stringify(t);
+%>
+var templates = <%-t%>;
+
+
+var $info_logs = $("#info-panel");
+var seen = {}
+$$ajax('/cms/logs').done(function (logs) {
+    if (logs.length != 0)
+        $info_logs.append("<h3>Recent Activity</h3>");
+    for (var i = 0; i < logs.length; i++)
+    {
+        var k = logs[i].type+logs[i].id;
+        if (seen[k])
+            continue;
+        seen[k] = true;
+        $info_logs.append(get_log_row(logs[i]));
+    }
+});
+
+
+function get_log_row(log) {
+    var $r = $$('log-row');
+    $$('action', {parent: $r}).text(log.action);
+
+    try {
+        var t = new EJS({text: templates[log.type]}).render(log.info.object);
+    } catch (e) {
+    }
+    $$('instance', {parent: $r}).text(t).click(function(){ location.href = '/cms/update/'+log.type+'/'+log.id});
+//    if (log.info.diffs) {
+//        for (var p in log.info.diffs) {
+//            var d = log.info.diffs[p];
+//            if (d.was)
+//                $$('diff', {parent: $r}).html("<i>" + p + ":</i> " + d.was);
+//        }
+//    }
+    $$('time', {parent: $r}).html(timeSince(log.time) + " by <i>" + log.user.email + "</i>");
+    return $r;
+}
+</script>
+
+
 
 <% include ../foot %>
 
