--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -55,6 +55,7 @@ input.small {
     color:#000;
 }
 
+textarea { margin: 0; width: 100%; }
 
 
 a, #info-cog {
@@ -194,7 +195,7 @@ select:active {
     position:fixed;
     top:40px;
     right: 0px;
-    width: 240px;
+    width: 250px;
     height: 100%;
     background-color: #282a38;
     color: #ccc;
@@ -204,7 +205,7 @@ select:active {
 }
 
 #info-panel-content {
-    padding: 10px 20px 10px 15px;
+    padding: 10px 20px 10px 8px;
 }
 .heading {
     font-size: 20px;
@@ -474,7 +475,9 @@ select:active {
 padding-top: 20px;
 }
 /* logs */
-
+.logs-panel-c {
+    overflow: auto; max-height: 400px;
+}
 .log-row {
     padding:10px 0 10px 0;
 }
@@ -482,6 +485,9 @@ padding-top: 20px;
 .log-row .instance { color: #48adff; cursor: pointer;}
 .log-row .instance:hover {    color: #79b6ff;}
 .log-row .action {  top: 0; color: #fff; }
-.log-row .diff { font-size: 11px; color: #999;}
+.log-row .diff { font-size: 11px; color: #999; }
+.log-row .diff-added { font-size: 11px; color: #ddd; font-weight: bold;}
+.log-row .diff-unchanged { font-size: 11px; color: #ccc;}
+.log-row .diff-removed { font-size: 11px; color: #555; text-decoration: line-through;}
 
 
