--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -199,13 +199,13 @@ select:active {
     height: 100%;
     background-color: #282a38;
     color: #ccc;
-    padding: 10px;
+    padding: 10px 20px 10px 15px;
     font-size: 13px;
     z-index: 13;
 }
 
 #info-panel-content {
-    padding: 10px 20px 10px 8px;
+    padding: 30px 0px 0px 1px;
 }
 .heading {
     font-size: 20px;
@@ -244,7 +244,7 @@ select:active {
 
 .model {
     font-size: 12px;
-    background-color: #48adff;
+    background-color: #2d3d50;
     color: #fff;
     cursor: move;
     margin: 2px 0 6px 0;
