--- a/app/views/auth/login.ejs
+++ b/app/views/auth/login.ejs
@@ -11,7 +11,7 @@
   </p>
   <p>
     <label>Password:</label>
-    <input type="text" name="password">
+    <input type="password" name="password">
   </p>
   <p>
     <input type="submit" value="Login">
