--- a/app/views/cms/dashboard.ejs
+++ b/app/views/cms/dashboard.ejs
@@ -33,7 +33,7 @@ $$ajax('/cms/logs').done(function (logs) {
         $info_logs.append("<h3>Recent Activity</h3>");
     for (var i = 0; i < logs.length; i++)
     {
-        var k = logs[i].type+logs[i].id;
+        var k = logs[i].action + logs[i].type+logs[i].id;
         if (seen[k])
             continue;
         seen[k] = true;
@@ -48,13 +48,6 @@ function get_log_row(log) {
 
     var t = render_template(log.type, log.info.object);
     $$('instance', {parent: $r}).text(t).click(function(){ location.href = '/cms/update/'+log.type+'/'+log.id});
-//    if (log.info.diffs) {
-//        for (var p in log.info.diffs) {
-//            var d = log.info.diffs[p];
-//            if (d.was)
-//                $$('diff', {parent: $r}).html("<i>" + p + ":</i> " + d.was);
-//        }
-//    }
     $$('time', {parent: $r}).html(timeSince(log.time) + " by <i>" + log.user.email + "</i>");
     return $r;
 }
