--- a/app/views/cms/head.ejs
+++ b/app/views/cms/head.ejs
@@ -13,6 +13,7 @@
 <script src="/js/util.js"></script>
 <script src="/js/layers.js"></script>
 <script src="/js/form.js"></script>
+<script src="/js/form_fields.js"></script>
 <script src="/js/browse.js"></script>
 <script src="/js/app.js"></script>
 
