--- a/app/views/cms/head.ejs
+++ b/app/views/cms/head.ejs
@@ -14,6 +14,7 @@
 <script src="/js/layers.js"></script>
 <script src="/js/form.js"></script>
 <script src="/js/form_fields.js"></script>
+<!-- add components <script>form_fields['my_field'] = function(){}</script> -->
 <script src="/js/browse.js"></script>
 <script src="/js/app.js"></script>
 
