resource preview for pkgcloud

--- a/app/views/cms/head.ejs
+++ b/app/views/cms/head.ejs
@@ -19,6 +19,7 @@
 <script src="/js/app.js"></script>
 
 <script>
+var containerHttp = "<%- containerHttp %>/";
 <%
 var t = {};
 for (var p in models)
