--- a/app/views/cms/head.ejs
+++ b/app/views/cms/head.ejs
@@ -6,15 +6,18 @@
 <script src="/js/lib/jquery.transit.js"></script>
 <script src="/js/lib/jquery.fileupload.js"></script>
 <script src="/js/lib/jquery.iframe-transport.js"></script>
+<script src="/js/lib/jquery.nearest.js"></script>
 
 <link href="/css/upload.css" rel="stylesheet">
+<link href="/css/form_workspace.css" rel="stylesheet">
 <link href="/css/codemirror.css" rel="stylesheet">
 
 <script src="/js/util.js"></script>
 <script src="/js/layers.js"></script>
 <script src="/js/form.js"></script>
 <script src="/js/form_fields.js"></script>
-<!-- add components <script>form_fields['my_field'] = function(){}</script> -->
+<script src="/js/form_workspace.js"></script>
+<script>form_fields['page_field'] = form_field_page_layout;</script>
 <script src="/js/browse.js"></script>
 <script src="/js/app.js"></script>
 
