--- a/app/views/hackettmill/artist.ejs
+++ b/app/views/hackettmill/artist.ejs
@@ -1,7 +1,8 @@
-ARTIST
+<h1>ARTIST</h1>
 
-<%= artist.first_name %> <%= artist.last_name %>
+<h3><%= artist.first_name %> <%= artist.last_name %></h3>
 
-<% for (var i=0; i<artist.work.length; i++) { %>
-    <%=artist.work[i]%><br>
+<% for (var i=0; i<artist.work.length; i++) {
+    var w = artist.work[i]; %>
+    <div class="<%=w.code%>"><%=w.title%></div>
 <% } %>
