--- a/app/modules/cms/views/cms/dashboard.ejs
+++ b/app/modules/cms/views/cms/dashboard.ejs
@@ -3,14 +3,39 @@
 <% include ../head1 %>
 <% include ../nav %>
 
-<div style="padding: 100px 300px 20px 20px;">
+<style>
+    h2 {
+        margin:27px 0 16px 0;
+        color:#337;
+        font-weight:normal;
+    }
+    .dashboard-model {
+        width: 200px;
+        height: 70px;
+        background-color: #e7e5e0;
+        margin: 0 10px 10px 0;
+        padding: 10px;
+        float: left;
+    }
+    .dashboard-model h3 {
+        margin:23px 0 4px 0;
+        color:#337;
+        font-weight:normal;
+    }
+    .dashboard-model .fa { font-size: 13px; }
+    a .fa { color: #999; }
+    a .fa-play-circle { padding-right:5px; }
 
+</style>
+
+<div style="padding: 30px 300px 20px 20px;">
+<h2><%=title%></h2>
 <% for(var p in models) {
     if (models[p].meta.dashboard) {  %>
-    <div style="width:200px; height:70px; border: 1px solid #555; margin:0 10px 10px 0;padding:10px;float:left; ">
-    <span style="font-size:22px; "><%= p %></span><br>
-    <a href='/cms/browse/<%=p%>'>browse</a>
-    <a href='/cms/create/<%=p%>'>create</a>
+    <div class="dashboard-model">
+    <h3><%= p %></h3>
+    <a href='/cms/browse/<%=p%>'>browse <i class='fa fa-play-circle'></i> </a>
+    <a href='/cms/create/<%=p%>'>create <i class='fa fa-plus-circle'></i> </a>
         </div>
 <% } } %>
 
@@ -20,7 +45,7 @@
 
 
 <script>
-
+$("#control-bar").hide();
 
 var $info_logs = $("#info-panel");
 var seen = {}
