let the cms do the work!

--- a/app/modules/cms/views/cms/browse.ejs
+++ b/app/modules/cms/views/cms/browse.ejs
@@ -7,7 +7,7 @@
 
 <script>
 $(document).ready(function () {
-    $("#browser").append(init_cms().$el());
+    $("#browser").append(init_cms('/cms').$el());
 });
 </script>
 
