--- a/app/modules/cms/views/cms/dashboard.ejs
+++ b/app/modules/cms/views/cms/dashboard.ejs
@@ -48,8 +48,8 @@
 <% } } %>
     <div class="dashboard-model dark">
     <h3>Users</h3>
-    <a href='/cms/browse/<%=p%>'>browse <i class='fa fa-play-circle'></i> </a>
-    <a href='/cms/create/<%=p%>'>create <i class='fa fa-plus-circle'></i> </a>
+    <a href='/cms/browse/User'>browse <i class='fa fa-play-circle'></i> </a>
+    <a href='/cms/create/User'>create <i class='fa fa-plus-circle'></i> </a>
     </div>
 
 <br clear="both">
