--- a/app/modules/cms/views/cms/form.ejs
+++ b/app/modules/cms/views/cms/form.ejs
@@ -10,7 +10,7 @@
 <script>
 
 $(document).ready(function () {
-    var cms = init_cms();
+    var cms = init_cms('/cms');
     $("#workspace").append(cms.$el());
 });
 </script>
