--- a/app/modules/cms/views/nav.ejs
+++ b/app/modules/cms/views/nav.ejs
@@ -6,10 +6,10 @@
         <span id="extra-options"></span>
     </div>
     <div class="user">
-    Logged in as <a href='/user/<%- user._id %>'><%-user.email%></a> / <a href='/logout'>Logout</a>
+    Logged in as <a href='/cms/update/User/<%- user._id %>'><%-user.email%></a> / <a href='/logout'>Logout</a>
     </div>
 <% } else { %>
-    <a href='/login'>Login</a> <a href='/register'>Register</a>
+    <a href='/login'>Login</a>
 <% } %>
 </div>
 
