--- a/app/modules/cms/public/css/main.css
+++ b/app/modules/cms/public/css/main.css
@@ -243,11 +243,12 @@ select:active {
 }
 
 .model {
-    font-size: 12px;
-    background-color: #2d3d50;
-    color: #fff;
+    font-size: 13px;
+    background-color: #e7e5e0;
+    color: #335;
     cursor: move;
-    margin: 2px 0 6px 0;
+    margin: 0px 0 6px 0;
+    padding: 3px 6px 3px 0;
 }
 
 .model .text {
