--- a/app/modules/cms/views/cms/dashboard.ejs
+++ b/app/modules/cms/views/cms/dashboard.ejs
@@ -38,14 +38,19 @@
 
 <div style="padding: 30px 300px 20px 15px;">
 <h2><%=title%></h2>
-<% for(var p in models) {
-    if (models[p].meta.dashboard) {  %>
+<% for(var i =0; i<models.length; i++) {%>
+<% if (models[i].meta.dashboard) {  %>
     <div class="dashboard-model">
-    <h3><%= p %></h3>
-    <a href='/cms/browse/<%=p%>'>browse <i class='fa fa-play-circle'></i> </a>
-    <a href='/cms/create/<%=p%>'>create <i class='fa fa-plus-circle'></i> </a>
+    <h3><%= models[i].meta.plural %></h3>
+    <% if (models[i]._browse) {  %>
+    <a href='/cms/browse/<%=models[i]._type%>'>browse <i class='fa fa-play-circle'></i> </a>
+    <% } %>
+    <% if (models[i]._create) {  %>
+    <a href='/cms/create/<%=models[i]._type%>'>create <i class='fa fa-plus-circle'></i> </a>
+    <% } %>
     </div>
-<% } } %>
+<% } %>
+<% } %>
 
 
 <br clear="both">
