--- a/app/modules/cms/public/css/main.css
+++ b/app/modules/cms/public/css/main.css
@@ -1,6 +1,9 @@
+@import url(http://fonts.googleapis.com/css?family=Merriweather);
+@import url(http://fonts.googleapis.com/css?family=Lato);
+@import url(http://fonts.googleapis.com/css?family=Playfair+Display);
 
 * {
-    font-family: 'Helvetica Neue', sans-serif;
+    font-family: 'Lato', sans-serif;
     letter-spacing: .02em;
 
 }
@@ -38,6 +41,7 @@ ul {
 label {
     text-transform: uppercase;
     font-size: 10px;
+    letter-spacing: 1px;
 }
 
 input {
