fool around with quilljs... :(

--- a/app/modules/cms/views/cms/head.ejs
+++ b/app/modules/cms/views/cms/head.ejs
@@ -7,6 +7,8 @@
 <script src="/js/lib/jquery.fileupload.js"></script>
 <script src="/js/lib/jquery.iframe-transport.js"></script>
 <script src="/js/lib/jquery.nearest.js"></script>
+<!--<script src="/js/lib/quill.js"></script>-->
+<!--<link href="/js/lib/themes/quill.snow.css" rel="stylesheet"/>-->
 
 <link href="/css/upload.css" rel="stylesheet">
 <link href="/css/form_workspace.css" rel="stylesheet">
