--- a/app/modules/cms/views/cms/dashboard.ejs
+++ b/app/modules/cms/views/cms/dashboard.ejs
@@ -10,9 +10,9 @@
         font-weight:normal;
     }
     .dashboard-model {
-        width: 200px;
+        width: 100%;
         height: 70px;
-        background-color: #e7e5e0;
+        background-color: #f3f3f3;
         margin: 0 15px 15px 0;
         padding: 15px;
         float: left;
