--- a/app/toddhido/views/index.ejs
+++ b/app/toddhido/views/index.ejs
@@ -1,48 +1,9 @@
-<!doctype html>
-<html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<% var title = "Todd Hido" %>
+<% include head.ejs %>
+<% include menu.ejs %>
 
-        <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
 
-        <link rel="stylesheet" href="/css/normalize.css">
-        <link rel="stylesheet" href="/css/main.css">
-        <link rel="stylesheet" href="/css/hido.css">
-        <script src="/js/vendor/modernizr.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
-        <div id="root">
-
-            <h3>TODD HIDO</h3>
-            <div id="main-menu">
-            <% mainMenu(site.pages) %>
-            </div>
-
-        </div>
-
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="/js/vendor/jquery.js"><\/script>')</script>
-        <script src="/js/plugins.js"></script>
-        <script src="/js/main.js"></script>
-
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='http://www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-840716-16');ga('send','pageview');
-        </script>
-    </body>
-</html>
+<% include foot.ejs %>
 
 
 
@@ -56,11 +17,5 @@
 
 
 
-<% function mainMenu(pages) { %>
-<ul>
-<% for (var i=0; i<pages.length; i++) { var p = pages[i]; %>
-<li><a href="<%= p.url %>"><%= p.title %></a></li>
-<% if (p.pages && p.pages.length !=0) { mainMenu(p.pages); } } %>
-</ul>
-<% } %>
+
 
