--- a/app/toddhido/public/css/hido.css
+++ b/app/toddhido/public/css/hido.css
@@ -1,26 +1,31 @@
+@import url("../font/stylesheet.css");
+
+
+
 * {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: UniversLTStd55Roman, sans-serif;
 }
 
 body {
-    background-color: #e0e0e0;
+    background-color: rgb(227,227,227) ;
 }
 
 h3 {
     font-size: 19px;
     font-weight: normal;
+    letter-spacing: 0;
 }
 
 .todd {
     position: absolute;
     top: 0px;
-    left: 10px;
+    left: 30px;
 }
 
 #main-menu {
     position: absolute;
     top: 25px;
-    left: 180px;
+    left: 230px;
     width: 70%;
 }
 
@@ -28,15 +33,15 @@ h3 {
     display: none;
     position: absolute;
     margin: 0;
-    padding: 0;
+    padding: 0 0 1px 0;
 }
 
 #main-menu li {
     margin: 0;
-    padding: 0;
+    padding: 0 0 0 6px;
     text-transform: uppercase;
-    font-size: 9px;
-    line-height: 18px;
+    font-size: 8px;
+    line-height: 13px;
 }
 
 #main-menu > ul {
@@ -49,28 +54,35 @@ h3 {
 }
 
 #main-menu > ul > ul {
-    background-color: #e0e0e0;
+    background-color: rgb(227,227,227);
     padding-right: 40px;
     padding-top:15px;
 }
 
 a {
-    color: #777;
-    letter-spacing: .5px;
+    color: #555;
+    letter-spacing: 1px;
 }
 
 a:hover {
     color: #000;
 }
 
+a.selected {
+    color: rgb(0, 188, 255);
+}
 
 
 
 .slides {
-    margin-top: 100px;
-    margin-bottom: 20px;
+    position: absolute;
+    top:0; left:0;
+    width: 100%;
+    height: 100%;
+    overflow:hidden;
 }
-
 .slides img {
-    width:100%; height: auto;
+    image-rendering:optimizeQuality;
+    -ms-interpolation-mode:bicubic;
+
 }
