--- a/app/toddhido/views/page.ejs
+++ b/app/toddhido/views/page.ejs
@@ -1,13 +1,20 @@
 <% var title = "Todd Hido: "+ page.title.toUpperCase(); %>
 <% var bp = "http://res.cloudinary.com/posttool/image/upload/"; %>
 <% include head.ejs %>
-<% include menu.ejs %>
 
 <div class="slides">
-    <% for (var i=0; i<page.resources.length && i<1; i++) { %>
+   <!-- <% for (var i=0; i<page.resources.length && i<1; i++) { %>
         <img src="<%=bp%>w_950,h_950,c_fit/<%= page.resources[i].meta.public_id%>.jpg"/><br>
-    <% }%>
+    <% }%> -->
 </div>
+
+<% include menu.ejs %>
+
 
 <% include foot.ejs %>
 
+<script src="/js/slideshow.js"></script>
+<script>
+    var bp = "<%= bp %>";
+    slideshow($(".slides"), <%- JSON.stringify(page) %>);
+</script>
