--- a/app/toddhido/public/css/hido.css
+++ b/app/toddhido/public/css/hido.css
@@ -1,13 +1,11 @@
 @import url("../font/stylesheet.css");
 
-
-
 * {
     font-family: UniversLTStd55Roman, sans-serif;
 }
 
 body {
-    background-color: rgb(227,227,227) ;
+    background-color: rgb(227, 227, 227);
 }
 
 h3 {
@@ -33,12 +31,12 @@ h3 {
     display: none;
     position: absolute;
     margin: 0;
-    padding: 0 0 1px 0;
+    padding: 0 0 6px 0;
 }
 
 #main-menu li {
     margin: 0;
-    padding: 0 0 0 6px;
+    padding: 0;
     text-transform: uppercase;
     font-size: 8px;
     line-height: 13px;
@@ -50,13 +48,13 @@ h3 {
 
 #main-menu > ul > li {
     float: left;
-    padding-right: 18px;
+    padding-right: 22px;
 }
 
 #main-menu > ul > ul {
-    background-color: rgb(227,227,227);
+    background-color: rgb(227, 227, 227);
     padding-right: 40px;
-    padding-top:15px;
+    padding-top: 15px;
 }
 
 a {
@@ -72,17 +70,19 @@ a.selected {
     color: rgb(0, 188, 255);
 }
 
-
-
 .slides {
     position: absolute;
-    top:0; left:0;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    overflow:hidden;
+    overflow: hidden;
 }
+
 .slides img {
-    image-rendering:optimizeQuality;
-    -ms-interpolation-mode:bicubic;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -o-crisp-edges;
+    image-rendering: -webkit-optimize-contrast;
+    -ms-interpolation-mode: nearest-neighbor;
 
 }
