--- a/app/modules/cms/public/css/main.css
+++ b/app/modules/cms/public/css/main.css
@@ -45,7 +45,7 @@ label {
 }
 
 input {
-    border: 1px solid #ccc;
+    border: 1px solid #aaa;
     font-size: 26px;
     padding: 7px;
     width: 100%;
