--- a/app/toddhido/views/page.ejs
+++ b/app/toddhido/views/page.ejs
@@ -8,14 +8,13 @@
         <img src="<%=bp%>w_950,h_950,c_fit/<%= page.resources[i].meta.public_id%>.jpg"/><br>
     <% }%> -->
 </div>
+<div class="info"></div>
 <% } else if (page.template == "text1") { %>
 <div class="text">
-    <%= page.title %><br>
     <%- page.description %>
 </div>
 <% } else if (page.template == "text2") { %>
 <div class="text">
-    <%= page.title %><br>
     <%- page.description %>
 </div>
 <% } %>
@@ -27,7 +26,7 @@
 <script src="/js/slideshow.js"></script>
 <script>
     var bp = "<%= bp %>";
-    slideshow($(".slides"), <%- JSON.stringify(page.resources) %>);
+    slideshow($(".slides"), $(".info"), <%- JSON.stringify(page.resources) %>);
     function navigate_next(){
         document.location.href = "<%= next_page.url %>";
     }
