--- a/app/modules/cms/views/nav.ejs
+++ b/app/modules/cms/views/nav.ejs
@@ -3,10 +3,13 @@
     <div class="options">
     <a href='/cms'><i class="fa fa-home"></i></a>
 
-        <span id="extra-options"></span>
+    <span id="extra-options"></span>
     </div>
     <div class="user">
-    Logged in as <a href='/cms/update/User/<%- user._id %>'><%-user.email%></a> / <a href='/logout'>Logout</a>
+        <a href="#"><i class="fa fa-user"></i></a>
+        <div class="user-menu">
+        Logged in as <a href='/cms/update/User/<%- user._id %>'><%-user.email%></a> / <a href='/logout'>Logout</a>
+        </div>
     </div>
 <% } else { %>
     <a href='/login'>Login</a>
