--- a/app/toddhido/views/page.ejs
+++ b/app/toddhido/views/page.ejs
@@ -4,7 +4,7 @@
 <% if (!page.template || page.template == "portfolio") {%>
 <div class="slides">
    <% if (page.resources) { %>
-        <img src="<%=bp%>w_350,h_350,c_fit/<%= page.resources[0].meta.public_id%>.jpg"/><br>
+        <img src="<%=resource_basepath%>w_350,h_350,c_fit/<%= page.resources[0].meta.public_id%>.jpg"/><br>
    <% }%>
 </div>
 <div class="info"><% if (page.resources) { %><%= page.resources[0].name %><% }%></div>
