--- a/app/toddhido/views/head.ejs
+++ b/app/toddhido/views/head.ejs
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
+        <meta name="viewport" content="width=1000, initial-scale=1">
 
         <link rel="stylesheet" href="/css/normalize.css">
         <link rel="stylesheet" href="/css/main.css">
