--- a/app/toddhido/views/head.ejs
+++ b/app/toddhido/views/head.ejs
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title><%= title %></title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=1000, initial-scale=1">
+        <meta name="viewport" content="width=1000">
 
         <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
 
